Changelog
=========

4.3.1 (unreleased)
------------------

- Added setting for disabling thematic search section. Refs #16044
  [reinhardt]


4.3.0 (2017-09-21)
------------------

- Added custom logo link that points to navigation root. Refs #15816
  [reinhardt]
- Also index e-book fields. Refs #15676
  [reinhardt]
- Dara-XML: Don't include empty ISBN or relations elements. Refs #15178
  [reinhardt]
- Export: Fixed MemoryError. Refs #15689
  [reinhardt]
- Dynamic portal title in comments viewlet. Refs #15699
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Allow running export after 6 days. Time between end of export and start of
  next export is always less than 7 days. Refs #15191
  [reinhardt]
- More unicode handling in newsletter. Refs #15075
  [reinhardt]
- Make sure we get all results from solr for the export. Refs  #15191
  [reinhardt]


4.2.0 (2017-03-30)
------------------

- bvid-update: More robust conditions. Refs #14156
  [reinhardt]
- metadata-export: Catch catalog inconsistencies. Refs #14156
  [reinhardt]
- metadat-export: Added 'force' flag. Also commit after deleting timestamp.
  Refs #14156
  [reinhardt]
- Upgrade to c.solr 5 but deactivate atomic updates. Refs #15018
  [reinhardt]
- Added parameter to extend sehepunkte import further into the past.
  Refs #14551
  [reinhardt]
- Sehepunkte: Skip boxes without header. Refs #14551
  [reinhardt]


4.1.2 (2017-01-27)
------------------

- Require specific custom version of collective.solr
  [reinhardt]


4.1.1 (2017-01-27)
------------------

- Changed fields of MissingBVIDExporter, refs #14156
  [reinhardt]
- Added bvid-update view, refs #14156
  [reinhardt]
- Use canonical_uri in BVID export if activated, refs #14156
  [reinhardt]


4.0.5 (2016-11-29)
------------------

- Handle volumes as well as issues in ChroniconExporter, refs #14262
  [reinhardt]
- Upgraded to collective.solr 4.0, refs #14362 [reinhardt]
- Added relations and PIDs plus some minor corrections, refs #14349